--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="main">
   <div class="content">
-    <h1>Página inicial da loja</h1>
+    <app-nav-bar></app-nav-bar>
   </div>
 </main>
 
