feature: add seach bar desktop to navbar

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
         />
       </figure>
     </li>
-    <li>search</li>
+    <app-search-bar></app-search-bar>
     <li>cart</li>
   </ul>
 </nav>
